# consciousness_agents

./: agent_design.md  pyproject.toml  system_design.md
consciousness_agents/: agents.py
