[tool.poetry]
name = "consciousness-agents"
version = "0.1.0"
description = ""
authors = ["Marshall Scott <bacchist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
autogen-agentchat = "0.4.0.dev2"
consciousness-api = {path = "../consciousness/public/consciousness_api-0.1.0.tar.gz"}
python-dotenv = "^1.0.1"
py-dotenv = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
